Grease Pencil: Deleting layer from dopesheet causes crash #73909

Closed
opened 2020-02-17 06:17:44 +01:00 by Amaral Krichman · 3 comments

System Information
Operating system: Windows 7
Graphics card: AMD Radeon (TM) R7 360 Series

Blender Version
Broken: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7, type: Release

Short description of error
In Grease Pencil, deleting the channels (layers) from the dopesheet causes a crash. Console spits an EXCEPTION_ACCESS_VIOLATION error.

Exact steps for others to reproduce the error
Delete any channel from the dopesheet and try to move the playhead

system-info.txt crash_report.blend

**System Information** Operating system: Windows 7 Graphics card: AMD Radeon (TM) R7 360 Series **Blender Version** Broken: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd76f, type: Release **Short description of error** In Grease Pencil, deleting the channels (layers) from the dopesheet causes a crash. Console spits an `EXCEPTION_ACCESS_VIOLATION` error. **Exact steps for others to reproduce the error** Delete any channel from the dopesheet and try to move the playhead [system-info.txt](https://archive.blender.org/developer/F8344317/system-info.txt) [crash_report.blend](https://archive.blender.org/developer/F8344318/crash_report.blend)

Added subscriber: @karmaral

Added subscriber: @karmaral

This issue was referenced by 0b5c2685db

This issue was referenced by 0b5c2685db57ff7726bb7d6886b0d4af650c4985

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-02-17 06:49:59 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73909
No description provided.