Fix T73909: Crash deleting grease pencil layer from dope sheet