source/blender/editors/animation/anim_channels_edit.c
@@ -1870,7 +1870,7 @@ static int animchannels_delete_exec(bContext *C, wmOperator *UNUSED(op))
     }
   }
 
-  /* cleanup */
+  ANIM_animdata_update(&ac, &anim_data);
   ANIM_animdata_freelist(&anim_data);
 
   /* send notifier that things have changed */
